[gd_scene load_steps=3 format=3 uid="uid://3ns1esujhac5"]

[ext_resource type="Script" path="res://GUI/Lives.gd" id="1_i6ttc"]
[ext_resource type="Texture2D" uid="uid://wpwb6n37hei5" path="res://Images/square.png" id="2_k8yni"]

[node name="Lives" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 20.0
script = ExtResource("1_i6ttc")
metadata/_edit_group_ = true

[node name="livePoint1" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_k8yni")

[node name="livePoint2" type="TextureRect" parent="."]
offset_left = 70.0
offset_right = 110.0
offset_bottom = 40.0
texture = ExtResource("2_k8yni")

[node name="livePoint3" type="TextureRect" parent="."]
offset_left = 140.0
offset_right = 180.0
offset_bottom = 40.0
texture = ExtResource("2_k8yni")
